# pytest-echo

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  appveyor.yml  coverage.xml  mkdocs.yml  pyproject.toml  pytest_echo.py  setup.cfg  setup.py  test_echo.py  tox.ini
.github/workflows/: docs.yml  release.yml  tests.yml
docs/: Makefile  changelog.rst  conf.py  index.rst
docs/src/: .pages  changelog.md  contributing.md  index.md  use.md
src/pytest_echo/: plugin.py
tests/: test_config.py  test_echo.py  test_version.py
tests/extras/: v1.py  v2.py
